Update documentation about Pipeline as a service